refactor: 리스트 변환 시 java 16의 더 간결한 메서드로 변경