@@ -11,7 +11,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,7 +27,7 @@ public class MovieService {
         return movieRepository.findAll()
                 .stream()
                 .map(MovieDefaultDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
